# hoax-experiments

./: .gitmodules  LICENSE  Makefile  README.md  convert_trace.py  gen_ltl.py  gen_trace.py  main.py  pycontract_monitor.py  pyproject.toml
2locks2threads/: 100k.toml  200k.toml  2locks2threads.100k.hoax.txt  2locks2threads.100k.txt  2locks2threads.200k.hoax.txt  2locks2threads.200k.txt  2locks2threads.50k.hoax.txt  2locks2threads.50k.txt  2locks2threads.ltl.txt  50k.toml  aut1.hoa  aut2.hoa  aut3.hoa  aut4.hoa  aut5.hoa  aut6.hoa  aut7.hoa  aut8.hoa
4locks4threads/: 100k.toml  200k.toml  4locks4threads.100k.hoax.txt  4locks4threads.100k.txt  4locks4threads.200k.hoax.txt  4locks4threads.200k.txt  4locks4threads.50k.hoax.txt  4locks4threads.50k.txt  4locks4threads.ltl.txt  50k.toml  aut1.hoa  aut10.hoa  aut11.hoa  aut12.hoa  aut13.hoa  aut14.hoa  aut15.hoa  aut16.hoa  aut17.hoa  aut18.hoa  aut19.hoa  aut2.hoa  aut20.hoa  aut21.hoa  aut22.hoa  aut23.hoa  aut24.hoa  aut25.hoa  aut26.hoa  aut27.hoa  aut28.hoa  aut29.hoa  aut3.hoa  aut30.hoa  aut31.hoa  aut32.hoa  aut4.hoa  aut5.hoa  aut6.hoa  aut7.hoa  (+2 more)
8locks8threads/: 100k.toml  200k.toml  50k.toml  8locks8threads.100k.hoax.txt  8locks8threads.100k.txt  8locks8threads.200k.hoax.txt  8locks8threads.200k.txt  8locks8threads.50k.hoax.txt  8locks8threads.50k.txt  8locks8threads.ltl.txt  aut1.hoa  aut10.hoa  aut100.hoa  aut101.hoa  aut102.hoa  aut103.hoa  aut104.hoa  aut105.hoa  aut106.hoa  aut107.hoa  aut108.hoa  aut109.hoa  aut11.hoa  aut110.hoa  aut111.hoa  aut112.hoa  aut113.hoa  aut114.hoa  aut115.hoa  aut116.hoa  aut12.hoa  (+107 more)
